--- a/stylesheets/bundle.css
+++ b/stylesheets/bundle.css
@@ -1,3 +1,6 @@
+.container {
+  padding: 5px; }
+
 /*! bulma.io v0.7.5 | MIT License | github.com/jgthms/bulma */
 @keyframes spinAround {
   from {
