--- a/src/stylesheets/common/common.scss
+++ b/src/stylesheets/common/common.scss
@@ -3,3 +3,14 @@
 .container {
   padding: 5px;
 }
+
+.content {
+  .image {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+}
+
+.mg5tb {
+  margin: 5px 0;
+}
